--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,17 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  Name: MyString
-  Photo: MyString
-  Bio: MyText
-  UpdatedAt: 2022-09-02
-  CreatedAt: 2022-09-02
-  PostCounter: 1
+  name: MyString
+  photo: MyString
+  bio: MyText
+  post_counter: 1
 
 two:
-  Name: MyString
-  Photo: MyString
-  Bio: MyText
-  UpdatedAt: 2022-09-02
-  CreatedAt: 2022-09-02
-  PostCounter: 1
+  name: MyString
+  photo: MyString
+  bio: MyText
+  post_counter: 1
