--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  AuthorId: 1
-  PostId: 1
-  CreatedAt: 2022-09-02
-  UpdatedAt: 2022-09-02
-
-two:
-  AuthorId: 1
-  PostId: 1
-  CreatedAt: 2022-09-02
-  UpdatedAt: 2022-09-02
+# This model initially had no columns defined. If you add columns to the
+# model remove the "{}" from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
