--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,19 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  AuthorId: 1
-  Title: MyString
-  Text: MyText
-  CreatedAt: 2022-09-02
-  UpdatedAt: 2022-09-02
-  CommentsCounter: 1
-  LikesCounter: 1
+  title: MyString
+  text: MyText
+  comments_counter: 1
+  likes_counter: 1
 
 two:
-  AuthorId: 1
-  Title: MyString
-  Text: MyText
-  CreatedAt: 2022-09-02
-  UpdatedAt: 2022-09-02
-  CommentsCounter: 1
-  LikesCounter: 1
+  title: MyString
+  text: MyText
+  comments_counter: 1
+  likes_counter: 1
